Make some changes

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Simple "chat" made using AWS</title>
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        
+
         <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
